Adding Copyright notice

--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<!--
+ 	Copyright 2014 Git.Tranings
+-->
+
 <head>
 	<title>An example Website for test</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
