--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 -->
 
 <head>
-	<title>An example Website for test</title>
+	<title>An Great Website for test</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,11 +18,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+				Some Intresting 
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Git Training 2014</p>
 	</footer>
 </body>
 </html>
